<resources>
    <string name="app_name">Choose Your Flighter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_ticket">Выбрать авиабилет</string>
    <string name="choose_flight_class">Выберите класс перелёта</string>
    <string name="arrival_text">Прибытие:</string>
    <string name="departure">Вылет:</string>
    <string name="cancel">Отмена</string>
    <string name="sheremetyevo">Sheremetyevo</string>
    <string name="john_kennedy_airport">John Kennedy Airport</string>
    <string name="one_transfer">1 пересадка</string>
    <string name="price_9999_ru">От 9999 р.</string>
    <string name="transfers">Пересадки:</string>
    <string name="buy_ticket">Купить билет</string>
    <string name="economy_class">Эконом-класс</string>
    <string name="business_class">Бизнес-класс</string>
    <string name="choose">Выбрать</string>
    <string name="transfer_message"> Вылет:\n%1$s\n Прибытие:\n%2$s</string>
    <string name="final_price"> Цена (%1$s-класс): %2$d р.</string>
    <string name="flight_class_price">%1$s: %2$d р.</string>
    <string name="race_number"> Рейс %1$d:</string>
    <string name="no_transfers">Без пересадок</string>
    <string name="economy">эконом</string>
    <string name="business">бизнес</string>
    <string name="no_intenet_connection">Нет интернет-соединения</string>
    <string name="schedule_loading">Загрузка рейсов...</string>
    <string name="schedule_loaded">Рейсы загружены!</string>
    <string name="svo_full">Москва (Международный аэропорт Шереметьево)</string>
    <string name="hnd_full">Токио (Международный аэропорт Токио)</string>
    <string name="nrt_full">Токио (Международный аэропорт Нарита)</string>
    <string name="ewr_full">Ньюарк (Международный аэропорт Ньюарк Либерти)</string>
    <string name="dme_full">Москва (Международный аэропорт Домодедово)</string>
    <string name="doh_full">Доха (Международный аэропорт Доха)</string>
    <string name="jfk_full">Нью-йорк (Международный аэропорт имени Дж. Кеннеди)</string>
    <string name="lhr_full">Лондон (Аэропорт Хитроу)</string>
    <string name="fra_full">Франкфурт-на-майне (Аэропорт Франкфурт-на-Майне)</string>
    <string name="price_from">От %1$d р.</string>
    <string name="transfer">%1$d пересадка</string>
    <plurals name="transers">
        <item quantity="one">%d пересадка</item>
        <item quantity="other">%d пересадки</item>
    </plurals>
</resources>