<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="@dimen/interitem_padding"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:padding="@dimen/rv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rv"
        android:orientation="vertical">

        <TextView
            android:id="@+id/departure_header_text_view"
            style="@style/headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="@dimen/standard_padding"
            android:text="@string/departure"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/departure_text_view"
            style="@style/airports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="@dimen/standard_padding"
            android:text="@string/sheremetyevo" />

        <TextView
            android:id="@+id/arrival_header_text_view"
            style="@style/headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/standard_padding"
            android:text="@string/arrival_text"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/arrival_text_view"
            style="@style/airports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="@dimen/standard_padding"
            android:text="@string/john_kennedy_airport" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/transfers_text_view"
                style="@style/transfers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/standard_padding"
                android:text="@string/one_transfer" />

            <TextView
                android:id="@+id/price_text_view"
                style="@style/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="@dimen/standard_padding"
                android:text="@string/price_9999_ru" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

