<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/interitem_padding"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        tools:context=".presentation.details.FlightInfoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rv"
            android:padding="@dimen/rv_item">

            <LinearLayout
                android:id="@+id/race_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/headers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departure" />

                <TextView
                    android:id="@+id/from_textview"
                    style="@style/airports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/standard_padding"
                    android:text="@string/sheremetyevo" />

                <TextView
                    style="@style/headers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival_text">

                </TextView>

                <TextView
                    android:id="@+id/to_textview"
                    style="@style/airports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/standard_padding"
                    android:text="@string/john_kennedy_airport" />

                <TextView
                    android:id="@+id/transfers_header_text_view"
                    style="@style/headers"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/transfers" />

                <LinearLayout
                    android:id="@+id/transfers_container"
                    style="@style/transfers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

            <TextView
                android:id="@+id/price_text_view"
                style="@style/transfers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="9999 р."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/race_container" />

            <Button
                android:id="@+id/purchase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buy_ticket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>